<resources>
    <string name="app_name">SmartIO</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome to Smart IO \nPlease Sign In to Continue"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="login_failed">"Login failed"</string>
    <string name="invalid_email_format">Enter a Valid Email</string>
    <string name="invalid_pasword_format"><![CDATA["Password must be > 5 "]]></string>

    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_account">Don\'t have an account?</string>
    <string name="usernane">Username</string>
    <string name="password">Password</string>
    <string name="invalid_email_password"><![CDATA[Enter a Valid Email & Password]]></string>
    <string name="don_t_have_account2">Don\'t have an account?\nSign Up</string>
    <string name="have_account">Already Have an Account</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="phone">Phone Number</string>
    <string name="dob">Date Of Birth</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="fname_invalid">Invalid Name</string>
    <string name="date_invalid">Please Select your Date of Birth</string>
    <string name="password_not_matching">Password Not Matching</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_info">User Info</string>
    <string name="reset_password">Reset Password</string>
    <string name="manage_accounts">Mange User Accounts</string>
    <string name="delete_account">Deactivate Account</string>
    <string name="settings">settings</string>
    <string name="save">Save</string>
    <string name="invalid_phone_format">Enter Valid Phone</string>
    <string name="update">Update</string>
    <string name="update_username">Update Email</string>
    <string name="new_username">New Email</string>
    <string name="new_password">New Password</string>
    <string name="update_password">Reset Password</string>
    <string name="logout">Log Out</string>
    <string name="cancel">Cancel</string>
    <string name="delete_account_1">Deactivate</string>
    <string name="ask_delete_account">Deleting your Account will cause losing all your saved data.\nAre you sure you want to delete your account?</string>
    <string name="wrong_password">Wrong Password. Please Enter the right password and try again</string>
    <string name="list_user">Connected Users</string>
    <string name="remove_assign">Disconnect</string>
    <string name="ask_remove_assign">Are you sure you want to disconnect this user form you?</string>
    <string name="list_regular_user">List Other Users</string>
    <string name="add_assign">Connect</string>
    <string name="ask_assign">Are you sure you want to Connect this user to you?</string>
    <string name="crops">Crops :</string>
    <string name="add_crops">Add Crops</string>
    <string name="assign_crop">Assign Crop</string>
    <string name="sensors">Sensors</string>
    <string name="add_sensor">Add Sensor</string>
    <string name="assign_sensor">Asssign Sensor</string>
    <string name="manage_server">Manage Server</string>
    <string name="change_ip">Change Ip Address</string>
    <string name="change_ip_2">Change Ip</string>
    <string name="ip_address">Ip Address</string>
    <string name="invalid_ip">Invalid Ip</string>
    <string name="add">Add</string>
    <string name="invalid_text">Invalid Text</string>
    <string name="crop_type">Crop Type</string>
    <string name="add_crop_type">Add Crop Type</string>
    <string name="invalid_crop">Invalid Crop Name</string>
    <string name="invalid_crop_type">Invalid Crop Type</string>
    <string name="error_get_crop_type">Couldn\'t get Crop type. Please Contact the Administrator or Try Again</string>
    <string name="qr_code">Barcode</string>
    <string name="invalid_barcode">Invalid Barcode</string>
    <string name="sensor_type">Sensor Type</string>
    <string name="add_sensor_type">Add Sensor Type</string>
    <string name="invalid_sensor_type">Invalid Sensor Type</string>
    <string name="invalid_uof">Invalid Unit of Measurment</string>
    <string name="add_uof">Add Unit of Measurement</string>
    <string name="invalid_sensor">Invalid Sensor Name</string>
    <string name="scan_qr">Scan Qr</string>
    <string name="sensor_name">Name</string>
    <string name="error_get_sensor">Error Getting Sensor Info. Please Try Again</string>
    <string name="uof">Unit of Measurement</string>
    <string name="error_server">Something Went Wrong! Please Contact Your Administrator or Try Again</string>
    <string name="error_qr">Error Getting Qr Code</string>
    <string name="ask_camera_permission">This app needs Camera Permission to start Scanning.\nDo you want to enable it ?</string>
    <string name="assign_crop_sensor_type">Assign Crop To Sensor Type</string>
    <string name="assign_crop_sensor">Assign Crop To Sensor</string>
    <string name="list_crops">Crop List</string>
    <string name="error_get_crop">Couldn\'t get Crop. Please Contact your Administrator or Try Again</string>
    <string name="delete">Delete</string>
    <string name="ask_delete_crop">Are you sure you want to delete this crop</string>
    <string name="assign">Assign</string>
    <string name="get_crop">Get Crops</string>
    <string name="get_sensor">Get Sensor</string>
    <string name="crop_name">Crop Name</string>
    <string name="error_get_user">Couldn\'t get User Info</string>
    <string name="crop_sensors">Crop - Sensors</string>
    <string name="crop_sensor">Crop - Sensor</string>
    <string name="empty_crop_sensor">"This Crop Hasn't been Assigned to Any Sensor "</string>
    <string name="crop">Crop</string>
    <string name="error_get_sensor_type_crop">Couldn\'t Get Sensor Type - Crop Assignment</string>
    <string name="invalid_min_value">Invalid Min Value</string>
    <string name="invalid_max_value">Invalid Max Value</string>
    <string name="ask_add_sensor">This Sensor is Not Registered Yet.\n Do you want ot add it to the Database?</string>
    <string name="deny_add_sensor">Sensor Not Found. Please Contact Your Administrator</string>
    <string name="ask_assign_sensor_type_crop">Crop not assigned to this Sensor Type.\n Do you want to Assign ?</string>
    <string name="min_value">Min Value</string>
    <string name="max_value">Max Value</string>
    <string name="crop_sensor_assigned">Crop is Already Assigned to this Sensor Type</string>
    <string name="ask_assign_sensor_user">This Sensor is not Assigned To You.\n Are you sure you want to Assign this Sensor to You</string>
    <string name="crop_sensor_type">Crops By Sensor Type</string>
    <string name="sensor">Sensor</string>
    <string name="ask_recover_state">Are you suare you want to Recover this State ?</string>
    <string name="change">Change</string>
    <string name="ask_deactivate_state">Are you sure you want to Deactivate this State ?</string>
    <string name="waiting_for_sensor_values">Waiting For Sensor Values</string>
    <string name="sensor_values">Sensor Values :</string>
    <string name="info">Info :</string>
    <string name="state_activated">State Activated</string>
    <string name="state_deactivated">State Deactivated</string>
    <string name="waiting_for_irrigation">Waiting for new irrigation</string>
    <string name="irrigation">Irrigation State</string>
    <string name="status">Status:</string>
    <string name="updade_value_success">Value Updated Successfully</string>
    <string name="crop_type_assigned">This Crop is already Assigned to this Sensor Type.\nPlease Select Another Crop</string>
</resources>