<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.user.UserFragment">

    <include
        layout="@layout/layout_top_bar"
        android:id="@+id/topBar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        style="@style/Scrolling">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/rootLL"
            android:padding="20dp">

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:baselineAligned="false">


            <include
                android:id="@+id/firstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                layout="@layout/layout_text_edit" />


            <include
                android:id="@+id/lastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                layout="@layout/layout_text_edit" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            android:baselineAligned="false">


            <include
                android:id="@+id/phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                layout="@layout/layout_text_edit" />

            <include
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                layout="@layout/layout_text_edit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/otherOptions"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/resetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_lock_reset_24"
                style="@style/ButtonMenuText"
                android:text="@string/reset_password" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/manageUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_manage_accounts_24"
                style="@style/ButtonMenuText"
                android:visibility="gone"
                android:text="@string/manage_accounts" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/deactivate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_no_accounts_24"
                style="@style/ButtonMenuText"
                android:text="@string/delete_account" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/logOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/logout_white_24dp"
                style="@style/ButtonMenuText"
                android:text="@string/logout" />
        </LinearLayout>

    </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>